--- a/advisories/20240707-TK-PUBLIC.md
+++ b/advisories/20240707-TK-PUBLIC.md
@@ -1,6 +1,6 @@
 # **Public Advisory**
 
-## **Warning: Hidden Genocide and Threat to Public Safety**
+## **Warning: Imminent Risk of Death for General Public**
 
 This advisory provides crucial information regarding a hidden genocide and ongoing threats to public safety related to specific churches and their communities. It is issued to inform and protect the public from serious dangers.
 
