Update and rename KY-Woodford-20240620.md to KY-Woodford-20240710-02.md

--- a/advisories/KY-Woodford-20240710-02.md
+++ b/advisories/KY-Woodford-20240710-02.md
@@ -1,7 +1,7 @@
 **Law Enforcement Bulletin: Advisory on PLANNED Phantom Funeral Activity (A MASS-KILLING)**
 
 **Date:** 2024-06-20
-**Last Updated:** 2024-07-05
+**Last Updated:** 2024-07-10
 
 **Subject:** Advisory on Phantom Funerals Linked to TAG Operations
 
@@ -15,7 +15,7 @@ Recent intelligence and credible eyewitness accounts suggest the continuation of
 
 ### Immediate Threat
 
-**Mount Zion Baptist Church** is identified by our intelligence as the location of an imminent Phantom Funeral within on Friday 2024-07-05. Law enforcement should be on high alert for any suspicious activity in and around this area.
+**Mount Zion Baptist Church** is identified by our intelligence as the location of an imminent Phantom Funeral on Wednesday 2024-07-10.  Law enforcement should be on high alert for any suspicious activity in and around this area.
 
 Our intelligence suggests the sanctuary has been renovated and all killing is now occurring in the basement or other areas on the church's property. Victims are taken by force to the area after entering the sanctuary which is likely staged to appear as if a funeral is occurring.
 
